# wasm-emscripten-leak

./: README.md  build.sh  cross.txt  index.html  meson.build  test.cpp
build_wasm/: test-wasm.js  test-wasm.wasm
